--- a/app/src/main/res/layout/dialog_read_book_style.xml
+++ b/app/src/main/res/layout/dialog_read_book_style.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/background"
     android:padding="10dp">
+
+    <io.legado.app.ui.widget.text.StrokeTextView
+        android:id="@+id/tv_title_center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
+        android:paddingTop="3dp"
+        android:paddingBottom="3dp"
+        android:text="@string/title_center"
+        android:gravity="center"
+        android:textSize="14sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <io.legado.app.ui.widget.text.StrokeTextView
         android:id="@+id/tv_text_bold"
@@ -18,7 +33,7 @@
         android:text="@string/text_bold"
         android:gravity="center"
         android:textSize="14sp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/tv_title_center"
         app:layout_constraintRight_toLeftOf="@+id/tv_text_font"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -77,7 +92,6 @@
         android:paddingBottom="3dp"
         android:gravity="center"
         android:textSize="14sp"
-        app:layout_constraintLeft_toRightOf="@+id/tv_padding"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -133,8 +147,8 @@
         android:id="@+id/tv_page_anim"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
+        android:paddingStart="6dp"
+        android:paddingEnd="6dp"
         android:text="@string/page_anim"
         app:layout_constraintTop_toBottomOf="@+id/vw_bg_fg" />
 
@@ -142,8 +156,8 @@
         android:id="@+id/rg_page_anim"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:orientation="horizontal"
         android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/tv_page_anim">
@@ -219,12 +233,37 @@
 
     <TextView
         android:id="@+id/tv_bg_ts"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
+        android:paddingStart="6dp"
+        android:paddingEnd="6dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:text="@string/text_bg_style"
-        app:layout_constraintTop_toBottomOf="@+id/vw_bg_fg1" />
+        app:layout_constraintTop_toBottomOf="@+id/vw_bg_fg1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/tv_share_layout" />
+
+    <io.legado.app.ui.widget.checkbox.SmoothCheckBox
+        android:id="@+id/cb_share_layout"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginRight="6dp"
+        app:layout_constraintTop_toTopOf="@id/tv_bg_ts"
+        app:layout_constraintBottom_toBottomOf="@id/tv_bg_ts"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:ignore="RtlHardcoded" />
+
+    <TextView
+        android:id="@+id/tv_share_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
+        android:text="@string/share_layout"
+        app:layout_constraintTop_toTopOf="@+id/tv_bg_ts"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_bg_ts"
+        app:layout_constraintRight_toLeftOf="@+id/cb_share_layout" />
 
     <io.legado.app.ui.widget.image.CircleImageView
         android:id="@+id/bg0"
