--- a/app/src/main/res/layout/item_fillet_text.xml
+++ b/app/src/main/res/layout/item_fillet_text.xml
@@ -4,7 +4,8 @@
     android:id="@+id/text_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="?attr/selectableItemBackground"
+    android:layout_margin="3dp"
+    android:background="@drawable/selector_fillet_btn_bg"
     android:ellipsize="end"
     android:gravity="center"
     android:padding="5dp"
