--- a/app/src/main/res/menu/content_select_action.xml
+++ b/app/src/main/res/menu/content_select_action.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/menu_replace"
-        android:title="@string/replace"
-        app:showAsAction="always" />
+        android:title="@string/replace" />
+
+    <item
+        android:id="@+id/menu_copy"
+        android:title="@android:string/copy" />
+
 </menu>
