--- a/app/src/main/res/menu/read_book.xml
+++ b/app/src/main/res/menu/read_book.xml
@@ -43,7 +43,7 @@
         <item
             android:id="@+id/menu_toc_regex"
             android:icon="@drawable/ic_exchange"
-            android:title="@string/txt_chapter_regex"
+            android:title="@string/txt_toc_regex"
             android:visible="false"
             app:showAsAction="always" />
     </group>
