--- a/app/src/main/res/menu/txt_toc_regex.xml
+++ b/app/src/main/res/menu/txt_toc_regex.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/menu_add"
+        android:title="@string/add"
+        android:icon="@drawable/ic_add"
+        app:showAsAction="always" />
 
 </menu>
