--- a/app/src/main/res/layout/item_toc_regex.xml
+++ b/app/src/main/res/layout/item_toc_regex.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/background"
@@ -14,20 +15,34 @@
         android:layout_weight="1"
         android:maxLines="1" />
 
-    <TextView
-        android:id="@+id/tv_edit"
+    <io.legado.app.lib.theme.view.ATESwitch
+        android:id="@+id/swt_enabled"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
-        android:padding="8dp"
-        android:text="@string/edit" />
+        android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/tv_del"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
-        android:padding="8dp"
-        android:text="@string/delete" />
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_edit"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_gravity="center"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/edit"
+        android:padding="6dp"
+        android:tooltipText="@string/edit"
+        android:src="@drawable/ic_edit"
+        android:tint="@color/tv_text_default"
+        tools:ignore="UnusedAttribute" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_delete"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/more_menu"
+        android:tooltipText="@string/more_menu"
+        android:padding="6dp"
+        android:src="@drawable/ic_clear_all"
+        android:tint="@color/tv_text_default"
+        tools:ignore="UnusedAttribute" />
 
 </LinearLayout>
