--- a/app/src/main/res/layout/view_select_action_bar.xml
+++ b/app/src/main/res/layout/view_select_action_bar.xml
@@ -46,10 +46,12 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/more_menu"
+        android:tooltipText="@string/more_menu"
         android:padding="6dp"
         android:src="@drawable/ic_more_vert"
         android:tint="@color/tv_text_default"
         android:visibility="gone"
-        tools:ignore="RtlHardcoded" />
+        tools:ignore="RtlHardcoded,UnusedAttribute" />
 
 </LinearLayout>
