--- a/app/src/main/res/layout/dialog_toc_regex_edit.xml
+++ b/app/src/main/res/layout/dialog_toc_regex_edit.xml
@@ -2,7 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="10dp"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp">
 
     <io.legado.app.ui.widget.text.TextInputLayout
         android:layout_width="match_parent"
