--- a/app/src/main/res/layout/view_book_page.xml
+++ b/app/src/main/res/layout/view_book_page.xml
@@ -32,7 +32,7 @@
         android:background="@color/divider"
         android:visibility="invisible" />
 
-    <io.legado.app.ui.book.read.page.content.ContentTextView
+    <io.legado.app.ui.book.read.page.ContentTextView
         android:id="@+id/content_text_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
