--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -152,4 +152,9 @@
         <item>简体转繁体</item>
     </string-array>
 
+    <string-array name="system_typefaces">
+        <item>系统默认字体</item>
+        <item>系统衬线字体</item>
+        <item>系统等宽等宽</item>
+    </string-array>
 </resources>
