--- a/app/src/main/res/layout/dialog_read_book_style.xml
+++ b/app/src/main/res/layout/dialog_read_book_style.xml
@@ -269,6 +269,7 @@
         android:id="@+id/bg0"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:src="@drawable/image_cover_default"
         app:civ_border_color="@color/tv_text_default"
         app:civ_border_width="1dp"
         app:text="@string/text"
@@ -281,6 +282,7 @@
         android:id="@+id/bg1"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:src="@drawable/image_cover_default"
         app:civ_border_color="@color/tv_text_default"
         app:civ_border_width="1dp"
         app:text="@string/text"
@@ -293,6 +295,7 @@
         android:id="@+id/bg2"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:src="@drawable/image_cover_default"
         app:civ_border_color="@color/tv_text_default"
         app:civ_border_width="1dp"
         app:text="@string/text"
@@ -305,6 +308,7 @@
         android:id="@+id/bg3"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:src="@drawable/image_cover_default"
         app:civ_border_color="@color/tv_text_default"
         app:civ_border_width="1dp"
         app:text="@string/text"
@@ -317,6 +321,7 @@
         android:id="@+id/bg4"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:src="@drawable/image_cover_default"
         app:civ_border_color="@color/tv_text_default"
         app:civ_border_width="1dp"
         app:text="@string/text"
