--- a/app/src/main/res/layout/dialog_number_picker.xml
+++ b/app/src/main/res/layout/dialog_number_picker.xml
@@ -7,6 +7,7 @@
         android:id="@+id/number_picker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:scrollbars="none" />
 
 </FrameLayout>
