--- a/app/src/main/res/xml/pref_config_read.xml
+++ b/app/src/main/res/xml/pref_config_read.xml
@@ -30,6 +30,12 @@
 
     <io.legado.app.ui.widget.prefs.SwitchPreference
         android:defaultValue="false"
+        android:title="@string/click_turn_page"
+        android:key="clickTurnPage"
+        app:iconSpaceReserved="false" />
+
+    <io.legado.app.ui.widget.prefs.SwitchPreference
+        android:defaultValue="false"
         android:title="@string/click_all_next_page"
         android:key="clickAllNext"
         app:iconSpaceReserved="false" />
