--- a/app/src/main/res/layout/view_read_menu.xml
+++ b/app/src/main/res/layout/view_read_menu.xml
@@ -147,7 +147,6 @@
 
         <!--底部设置栏-->
         <FrameLayout
-            android:id="@+id/fl_bottom_bg"
             android:layout_width="match_parent"
             android:layout_height="100dp">
 
@@ -157,6 +156,7 @@
                 android:layout_height="match_parent" />
 
             <LinearLayout
+                android:id="@+id/ll_bottom_bg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/background_menu"
