--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -243,7 +243,7 @@
 
                 </LinearLayout>
 
-                <io.legado.app.ui.widget.ScrollTextView
+                <io.legado.app.ui.widget.text.ScrollTextView
                     android:id="@+id/tv_intro"
                     android:layout_marginTop="8dp"
                     android:layout_width="match_parent"
