--- a/app/src/main/res/layout/dialog_read_padding.xml
+++ b/app/src/main/res/layout/dialog_read_padding.xml
@@ -109,6 +109,7 @@
             android:text="@string/showLine" />
 
         <io.legado.app.ui.widget.checkbox.SmoothCheckBox
+            android:id="@+id/cb_show_line"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_margin="6dp" />
