--- a/app/src/main/res/menu/arrange_book_sel.xml
+++ b/app/src/main/res/menu/arrange_book_sel.xml
@@ -2,6 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/menu_update_enable"
+        android:title="@string/allow_update" />
+
+    <item
+        android:id="@+id/menu_update_disable"
+        android:title="@string/disable_update" />
+
+    <item
         android:id="@+id/menu_del_selection"
         android:title="@string/delete" />
 
