--- a/app/src/main/res/layout/dialog_title_config.xml
+++ b/app/src/main/res/layout/dialog_title_config.xml
@@ -35,6 +35,7 @@
     </RadioGroup>
 
     <io.legado.app.ui.widget.DetailSeekBar
+        android:id="@+id/dsb_title_size"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="3dp"
