--- a/app/src/main/res/layout/view_book_page.xml
+++ b/app/src/main/res/layout/view_book_page.xml
@@ -78,7 +78,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="3dp"
-            tools:ignore="RtlHardcoded,RtlSymmetry" />
+            android:textSize="10sp"
+            tools:ignore="RtlHardcoded,RtlSymmetry,SmallSp" />
 
     </LinearLayout>
 
