--- a/app/src/main/res/xml/pref_config_other.xml
+++ b/app/src/main/res/xml/pref_config_other.xml
@@ -6,6 +6,14 @@
         android:title="@string/main_activity"
         app:iconSpaceReserved="false">
 
+        <ListPreference
+            android:key="@string/pk_requested_direction"
+            android:defaultValue="@string/screen_unspecified"
+            android:title="@string/screen_direction"
+            android:entries="@array/screen_direction_title"
+            android:entryValues="@array/screen_direction_title"
+            app:iconSpaceReserved="false" />
+
         <io.legado.app.ui.widget.prefs.SwitchPreference
             android:defaultValue="false"
             android:key="@string/pk_auto_refresh"
