--- a/app/src/main/res/drawable/ic_bottom_person_e.xml
+++ b/app/src/main/res/drawable/ic_bottom_person_e.xml
@@ -1,5 +1,12 @@
-<vector android:height="24dp" android:viewportHeight="18"
-    android:viewportWidth="16" android:width="21.333334dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#959ECA" android:pathData="M8,8C5.8,8 4,6.2 4,4s1.8,-4 4,-4c2.2,0 4,1.8 4,4S10.2,8 8,8zM8,1.5C6.6,1.5 5.5,2.6 5.5,4S6.6,6.5 8,6.5c1.4,0 2.5,-1.1 2.5,-2.5S9.4,1.5 8,1.5z"/>
-    <path android:fillColor="#959ECA" android:pathData="M14.5,18h-13c-0.4,0 -0.8,-0.2 -1.1,-0.4S0,16.9 0,16.5V14c0,-1.1 0.4,-2.1 1.2,-2.8C1.9,10.4 2.9,10 4,10h8c1.1,0 2.1,0.4 2.8,1.2c0.8,0.8 1.2,1.8 1.2,2.8v2.5c0,0.4 -0.2,0.8 -0.4,1.1S14.9,18 14.5,18zM4,11.5c-0.7,0 -1.3,0.3 -1.8,0.7c-0.5,0.5 -0.7,1.1 -0.7,1.8v2.5h13V14c0,-0.7 -0.3,-1.3 -0.7,-1.8c-0.5,-0.5 -1.1,-0.7 -1.8,-0.7H4z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="24dp"
+    android:viewportHeight="18"
+    android:viewportWidth="16"
+    android:width="21.333334dp">
+    <path
+        android:fillColor="#959ECA"
+        android:pathData="M8,8C5.8,8 4,6.2 4,4s1.8,-4 4,-4c2.2,0 4,1.8 4,4S10.2,8 8,8zM8,1.5C6.6,1.5 5.5,2.6 5.5,4S6.6,6.5 8,6.5c1.4,0 2.5,-1.1 2.5,-2.5S9.4,1.5 8,1.5z" />
+    <path
+        android:fillColor="#959ECA"
+        android:pathData="M14.5,18h-13c-0.4,0 -0.8,-0.2 -1.1,-0.4S0,16.9 0,16.5V14c0,-1.1 0.4,-2.1 1.2,-2.8C1.9,10.4 2.9,10 4,10h8c1.1,0 2.1,0.4 2.8,1.2c0.8,0.8 1.2,1.8 1.2,2.8v2.5c0,0.4 -0.2,0.8 -0.4,1.1S14.9,18 14.5,18zM4,11.5c-0.7,0 -1.3,0.3 -1.8,0.7c-0.5,0.5 -0.7,1.1 -0.7,1.8v2.5h13V14c0,-0.7 -0.3,-1.3 -0.7,-1.8c-0.5,-0.5 -1.1,-0.7 -1.8,-0.7H4z" />
 </vector>
