--- a/app/src/main/res/drawable/ic_bottom_rss_feed_e.xml
+++ b/app/src/main/res/drawable/ic_bottom_rss_feed_e.xml
@@ -1,9 +1,18 @@
-<vector android:height="24dp" android:viewportHeight="18"
-    android:viewportWidth="16" android:width="21.333334dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#5A5F64" android:fillType="nonZero"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="24dp"
+    android:viewportHeight="18"
+    android:viewportWidth="16"
+    android:width="21.333334dp">
+    <path
+        android:fillColor="#5A5F64"
+        android:fillType="nonZero"
         android:pathData="M13.9991,0L2.0009,0C0.896,0 0,0.907 0,2.025L0,17.1C0,17.6133 0.4143,18 0.8871,18C0.9792,18 1.0748,17.9842 1.1704,17.9525L6.8756,15.6797C7.2404,15.5566 7.6211,15.4951 8,15.4951C8.3789,15.4951 8.7596,15.5566 9.1244,15.6797L14.8296,17.9525C14.9234,17.9842 15.019,18 15.1129,18C15.5857,18 16,17.6133 16,17.1L16,2.025C16,0.907 15.104,0 13.9991,0ZM14.3993,16.0699L9.7211,14.2049L9.6804,14.1891L9.6397,14.175C9.1102,13.9957 8.5595,13.9061 8,13.9061C7.4405,13.9061 6.8898,13.9975 6.3603,14.175L6.3196,14.1891L6.2789,14.2049L1.6007,16.0699L1.6007,2.025C1.6007,1.7842 1.7795,1.5891 2.0009,1.5891L13.9991,1.5891C14.2205,1.5891 14.3993,1.7842 14.3993,2.025L14.3993,16.0699Z"
-        android:strokeColor="#00000000" android:strokeWidth="1"/>
-    <path android:fillColor="#5A5F64" android:fillType="nonZero"
+        android:strokeColor="#00000000"
+        android:strokeWidth="1" />
+    <path
+        android:fillColor="#5A5F64"
+        android:fillType="nonZero"
         android:pathData="M10.947,6.4961L8.7863,6.4961L8.7863,4.1914C8.7863,3.7417 8.4349,3.375 8,3.375C7.5668,3.375 7.2137,3.7399 7.2137,4.1914L7.2137,6.4961L5.053,6.4961C4.6198,6.4961 4.2667,6.861 4.2667,7.3125C4.2667,7.7622 4.6181,8.1289 5.053,8.1289L7.2137,8.1289L7.2137,10.4336C7.2137,10.8833 7.5651,11.25 8,11.25C8.4332,11.25 8.7863,10.8851 8.7863,10.4336L8.7863,8.1289L10.947,8.1289C11.3802,8.1289 11.7333,7.764 11.7333,7.3125C11.7333,6.8628 11.3819,6.4961 10.947,6.4961L10.947,6.4961Z"
-        android:strokeColor="#00000000" android:strokeWidth="1"/>
+        android:strokeColor="#00000000"
+        android:strokeWidth="1" />
 </vector>
